# DIET_Tuning

./: .gitignore  README.md  main.py  pyproject.toml  test.py  test_dinov3.py  test_dinov3_structure.py  test_rgb_transforms.py
config/: __init__.py  base_config.py  data.py  data_config.py  experiment.py  model_config.py  models.py  params.py  training_config.py
evaluation/: metrics.py
loaders/: data_loader.py
models/: aim.py  dinov2.py  ijepa.py  mae.py  mambavision.py  resnet50.py  simclr.py  utils.py
notebooks/: Dinov2_Mnist_new_version copy 2.ipynb
results/dinov2_small_dermamnist_lr1.0e-04_diet100_ls0.2_20250307_151524_921271_ebca907d/: experiment_info.json  metrics_history.json  progression_table.csv  results_summary.txt
results/dinov2_small_dermamnist_lr1.0e-04_diet100_ls0.2_20250307_153034_708040_0a62d89d/: experiment_info.json  metrics_history.json  progression_table.csv  results_summary.txt
results/dinov2_small_dermamnist_lr1.0e-05_diet100_ls0.3_20250307_173900_462128_bc995802/: experiment_info.json  metrics_history.json  progression_table.csv  results_summary.txt
results/dinov2_small_dermamnist_lr1.0e-05_diet100_ls0.3_20250307_175537_500693_3a418157/: experiment_info.json  metrics_history.json  progression_table.csv  results_summary.txt
results/dinov2_small_dermamnist_lr5.0e-04_diet100_ls0.3_20250307_180432_391499_b8438d9d/: experiment_info.json  metrics_history.json  progression_table.csv  results_summary.txt
results/dinov2_small_dermamnist_lr5.0e-04_diet100_ls0.3_20250307_214111_067730_a6acb9be/: experiment_info.json  (+3 more)
training/: config.py  metrics_utils.py  trainer.py
utils/: checkpoint_utils.py  lr_schedule.py  sanity_check.py  wandb_logger.py
(+398 files in other folders)
