[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diet-tuning"
version = "0.1.0"
description = "Dynamic Information Exchange Training (DIET) for fine-tuning vision models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bryan Rodas", email = "bryanrodas201@gmail.com"},
    {name = "Jakob Ambsdorf", email = "jaam@di.ku.dk"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.23.0",
    "matplotlib>=3.5.0",
    "wandb>=0.15.0",
    "tqdm>=4.65.0",
    "transformers @ git+https://github.com/huggingface/transformers",
    "pillow>=9.0.0",
    "medmnist>=2.1.0",
    "timm"
]

[project.optional-dependencies]
dev = [
    "huggingface_hub"
]

[project.urls]
"Homepage" = "https://github.com/jakobamb/DIET_Tuning"
"Bug Tracker" = "https://github.com/jakobamb/DIET_Tuning/issues"

[tool.setuptools]
packages = ["config", "evaluation", "loaders", "models", "training", "utils"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pylint.format]
max-line-length = 88
